feat: update to Next.js 15, Node.js 23, and add health endpoint
- Update Node.js from 18 to 23 in all workflows and Dockerfile
- Update Next.js to v15.5.3 and React to v19.1.1
- Add TypeScript type checking to CI workflows
- Fix lint command to use 'next lint' instead of 'npm run build'
- Create /api/health endpoint for Kubernetes health checks
- Update workflows to include type checking and proper linting
- Remove deprecated swcMinify option from Next.js config
- Update Tailwind config for App Router structure

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '23'
           cache: 'npm'
 
       - name: Install dependencies
@@ -31,8 +31,11 @@ jobs:
       - name: Run tests
         run: npm test -- --coverage --watchAll=false
 
+      - name: Run TypeScript type check
+        run: npm run type-check
+
       - name: Run linting
-        run: npm run build
+        run: npm run lint
 
   build:
     name: Build
@@ -45,7 +48,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '23'
           cache: 'npm'
 
       - name: Install dependencies
@@ -69,6 +72,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile.ci
+          platforms: linux/amd64,linux/arm64
           push: ${{ github.ref == 'refs/heads/main' }}
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
