--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '23'
           cache: 'npm'
 
       - name: Install dependencies
@@ -42,6 +42,12 @@ jobs:
 
       - name: Run tests
         run: npm test -- --coverage --watchAll=false
+
+      - name: Run TypeScript type check
+        run: npm run type-check
+
+      - name: Run linting
+        run: npm run lint
 
       - name: Build application
         run: npm run build
@@ -61,6 +67,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile.ci
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.VERSION }}
