--- a/.github/workflows/pr-canary.yml
+++ b/.github/workflows/pr-canary.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '23'
           cache: 'npm'
 
       - name: Install dependencies
@@ -37,6 +37,12 @@ jobs:
 
       - name: Run tests
         run: npm test -- --coverage --watchAll=false
+
+      - name: Run TypeScript type check
+        run: npm run type-check
+
+      - name: Run linting
+        run: npm run lint
 
       - name: Build application
         run: npm run build
@@ -56,6 +62,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile.ci
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:pr-${{ github.event.pull_request.number }}
