--- a/env.example
+++ b/env.example
@@ -1,8 +1,8 @@
 # API Configuration
-REACT_APP_API_URL=http://localhost:8081
+NEXT_PUBLIC_API_URL=http://localhost:8081
 
 # WebSocket Configuration  
-REACT_APP_WS_URL=ws://localhost:8082
+NEXT_PUBLIC_WS_URL=ws://localhost:8080
 
 # Development Settings
 GENERATE_SOURCEMAP=false
