--- a/.github/workflows/pr-canary.yml
+++ b/.github/workflows/pr-canary.yml
@@ -36,7 +36,7 @@ jobs:
         run: npm ci
 
       - name: Run tests
-        run: npm test -- --coverage --watchAll=false
+        run: npm test -- --coverage --watchAll=false --passWithNoTests
 
       - name: Run TypeScript type check
         run: npm run type-check
