perf: optimize Docker build performance
- Add --no-audit --no-fund flags to npm ci for faster installs
- Disable Next.js telemetry with NEXT_TELEMETRY_DISABLED=1
- Add scoped GitHub Actions cache (ci, pr, release scopes)
- Add BUILDKIT_INLINE_CACHE=1 for better layer caching
- Optimize cache-from and cache-to strategies for faster builds

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,5 +76,7 @@ jobs:
           push: ${{ github.ref == 'refs/heads/main' }}
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=gha,scope=ci
+          cache-to: type=gha,mode=max,scope=ci
+          build-args: |
+            BUILDKIT_INLINE_CACHE=1
