--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,8 +72,10 @@ jobs:
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.VERSION }}
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=gha,scope=release
+          cache-to: type=gha,mode=max,scope=release
+          build-args: |
+            BUILDKIT_INLINE_CACHE=1
 
       - name: Update manifests repository
         id: update_manifests
