--- a/.github/workflows/pr-canary.yml
+++ b/.github/workflows/pr-canary.yml
@@ -66,8 +66,10 @@ jobs:
           push: true
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:pr-${{ github.event.pull_request.number }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=gha,scope=pr
+          cache-to: type=gha,mode=max,scope=pr
+          build-args: |
+            BUILDKIT_INLINE_CACHE=1
 
       - name: Comment PR with canary image
         uses: actions/github-script@v7
