fix: resolve Docker build retry issues
- Fix npm ci to install all dependencies (not just production)
- Add NODE_OPTIONS with increased memory limit for builds
- Add build optimizations to Next.js config
- Disable telemetry in Next.js config
- Add outputs: type=registry to Docker build action
- These changes should prevent the retry 1/3 issue

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,6 +76,7 @@ jobs:
           cache-to: type=gha,mode=max,scope=release
           build-args: |
             BUILDKIT_INLINE_CACHE=1
+          outputs: type=registry
 
       - name: Update manifests repository
         id: update_manifests
