--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -1,18 +1,15 @@
 # Multi-stage build for Next.js app
-FROM node:23-alpine AS base
+# This Dockerfile copies the pre-built Next.js app for the target architecture
 
-# Install dependencies only when needed
-FROM base AS deps
+# Build stage - build the Next.js app once
+FROM node:23-alpine AS builder
 WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
 RUN npm ci --no-audit --no-fund
 
-# Rebuild the source code only when needed
-FROM base AS builder
-WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
+# Copy source code
 COPY . .
 
 # Build the application with optimizations
@@ -20,8 +17,8 @@ ENV NEXT_TELEMETRY_DISABLED 1
 ENV NODE_OPTIONS="--max-old-space-size=4096"
 RUN npm run build
 
-# Production image, copy all the files and run next
-FROM base AS runner
+# Production stage - copy built files to target architecture
+FROM node:23-alpine AS runner
 WORKDIR /app
 
 ENV NODE_ENV production
@@ -29,15 +26,10 @@ ENV NODE_ENV production
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
-COPY --from=builder /app/public ./public
-
-# Set the correct permission for prerender cache
-RUN mkdir .next
-RUN chown nextjs:nodejs .next
-
-# Automatically leverage output traces to reduce image size
+# Copy built application from builder stage
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+COPY --from=builder --chown=nextjs:nodejs /app/public ./public
 
 USER nextjs
 
