--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,11 @@ jobs:
         run: npm ci
 
       - name: Build application
-        run: npm run build
+        run: |
+          # Build with optimizations for faster builds
+          export NEXT_TELEMETRY_DISABLED=1
+          export NODE_OPTIONS="--max-old-space-size=4096"
+          npm run build
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
