--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -1,23 +1,7 @@
 # Multi-stage build for Next.js app
-# This Dockerfile copies the pre-built Next.js app for the target architecture
+# This Dockerfile copies pre-built Next.js app (built in GitHub Actions)
 
-# Build stage - build the Next.js app once
-FROM node:23-alpine AS builder
-WORKDIR /app
-
-# Copy package files
-COPY package*.json ./
-RUN npm ci --no-audit --no-fund
-
-# Copy source code
-COPY . .
-
-# Build the application with optimizations
-ENV NEXT_TELEMETRY_DISABLED 1
-ENV NODE_OPTIONS="--max-old-space-size=4096"
-RUN npm run build
-
-# Production stage - copy built files to target architecture
+# Production stage - copy pre-built application
 FROM node:23-alpine AS runner
 WORKDIR /app
 
@@ -26,10 +10,10 @@ ENV NODE_ENV production
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
-# Copy built application from builder stage
-COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
-COPY --from=builder --chown=nextjs:nodejs /app/public ./public
+# Copy pre-built application (built in GitHub Actions)
+COPY --chown=nextjs:nodejs .next/standalone ./
+COPY --chown=nextjs:nodejs .next/static ./.next/static
+COPY --chown=nextjs:nodejs public ./public
 
 USER nextjs
 
