--- a/.github/workflows/pr-canary.yml
+++ b/.github/workflows/pr-canary.yml
@@ -59,7 +59,7 @@ jobs:
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.PAT_TOKEN }}
 
       - name: Build and push canary image
         uses: docker/build-push-action@v5
