--- a/env.example
+++ b/env.example
@@ -1,8 +1,14 @@
 # API Configuration
-NEXT_PUBLIC_API_URL=http://localhost:8081
+# For local development with domains (recommended)
+NEXT_PUBLIC_API_URL=http://api.raidhelper.local:8086
+# Alternative: Direct port access
+# NEXT_PUBLIC_API_URL=http://localhost:8082
 
 # WebSocket Configuration  
-NEXT_PUBLIC_WS_URL=ws://localhost:8080
+# For local development with domains (recommended)
+NEXT_PUBLIC_WS_URL=ws://ws.raidhelper.local:8086
+# Alternative: Direct port access
+# NEXT_PUBLIC_WS_URL=ws://localhost:8083
 
 # Development Settings
 GENERATE_SOURCEMAP=false
